# ibtop

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.debian  Dockerfile.ubuntu1804  LICENSE  README.md  build-docker.sh  build-docker.sh.debian  ibtop.toml
examples/: scope.csv  scope_wpartner.csv
src/: app.rs  event.rs  logging.rs  main.rs  scope.rs  ui.rs
src/services/: ibmad.rs  lib.rs  mod.rs  rsmad.rs  rsmad_services.rs
src/ui/: forms.rs  helpers.rs  mod.rs  view.rs
