[package]
name = "ibtop"
version = "0.1.0"
description = "a top-like application for IB switches"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
config = "0.15.11"
chrono = "0.4.40"
rsmad = { path = "/root/git/rsmad" }
clap = { version = "4.5.32", features = ["derive"] }
serde_derive = "1.0"
serde = { version = "1.0.219", features = ["derive"] }
rayon = "1.10.0"
gag = "1.0.0"
